[build-system]
requires = ["setuptools>=61,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-user-scale-core"
version = "0.1.1"
description = "Core weight routing primitives for multi-user scale integrations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Ron Ben Yosef" }]
keywords = ["scale", "weight", "routing", "multi-user"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/ronnnnnnnnnnnnn/multi-user-scale-core"
"Bug Tracker" = "https://github.com/ronnnnnnnnnnnnn/multi-user-scale-core/issues"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["multi_user_scale_core*"]

[tool.setuptools.package-data]
multi_user_scale_core = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
